<resources>
    <string name="app_name">Inventory Management</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="phone_no">Access Point</string>
    <string name="sim_card">Sim Card</string>
    <string name="bio_metrics">Bio-Metrics</string>
    <string name="enter_serial">Enter Serial</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_issue_replace">Mobile Issue/Replace</string>
    <string name="enter_old_device_details">Enter Old Device Details</string>
    <string name="enter_user_s_details">Enter User\'s Details</string>
    <string name="enter_empid">Enter EmpID</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_imei_2">Enter IMEI 2</string>
    <string name="enter_imei_1">Enter IMEI 1</string>
    <string name="enter_new_device_details">Enter New Device Details</string>
    <string name="issue">Issue</string>
    <string name="issue_device">Issue Device</string>
    <string name="replace">Replace</string>
    <string name="sim_replace">Sim Only</string>
    <string name="mobile">Mobile</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="email_message">Enter your email address</string>
    <string name="send_otp">Send Reset Link</string>
    <string name="enter_here">Enter Here</string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="welcome">Hi ,</string>
    <string name="sign_in">Sign In</string>
    <string name="verify">Verify</string>
    <string name="or">OR</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_details_to_continue">Enter Details to Continue</string>
    <string name="sign_in_message">Already have Account ? Sign In</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update_name">Update Name</string>
    <string name="updateprofile">UpdateProfile</string>
    <string name="update_email">Update Email</string>
    <string name="upadate_password">Upadate Password</string>
    <string name="verify_email">Verify Email</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="select_options">Select Options</string>
    <string name="update_profile">Update Profile</string>
    <string name="log_out">Logout</string>


    <string-array name="Mobile_Model">
        <item>Select Mobile Model</item>
        <item>Samsung J2</item>
        <item>Samsung J4</item>
        <item>Panasonic eluga</item>
        <item>Moto C</item>
        <item>iVoomi</item>
    </string-array>


    <string-array name="mane">
        <item>Select Operators</item>
        <item>VodaFone</item>
        <item>Airtel</item>
        <item>Jio</item>
    </string-array>


    <string-array name="Designation">
        <item>Select Designation</item>
        <item>G.D.S</item>
        <item>Post Man</item>
        <item>PA</item>
        <item>IPPB</item>
    </string-array>


    <string-array name="Bio_model">
        <item>Select Model</item>
        <item>Mantra</item>
        <item>Starek</item>
        <item>Morpho</item>
    </string-array>
    <string name="title_activity_bottom__navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset">Reset</string>
    <string name="add_records">Add New Records</string>
    <string name="do_you_really_want_to_exit">Do You Really want to exit ?</string>
    <string name="enter_mobile_sim_no">Enter Mobile(Sim) No.</string>
</resources>