<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileUpdate">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/forget1"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/signuptop"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="296dp"
        android:layout_height="53dp"
        android:layout_alignBottom="@+id/imageView9"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="-3dp"
        android:fontFamily="@font/alegreya_bold"
        android:gravity="center"
        android:text="@string/updateprofile"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/name_update"
        android:layout_width="385dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="407dp"
        android:background="@drawable/whitebutton"
        android:ems="10"
        android:fontFamily="@font/adamina"
        android:hint="@string/enter_your_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/Update_NAME"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="337dp"
        android:background="@drawable/loginbutton"
        android:text="@string/update_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/emailUpdate"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="131dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="276dp"
        android:background="@drawable/loginbutton"
        android:text="@string/update_email"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/passwordUpdate"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="219dp"
        android:background="@drawable/loginbutton"
        android:text="@string/upadate_password"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/home_back"
        android:layout_width="60dp"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="345dp"
        android:background="#00FBFBFB"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/back_arrow" />

    <TextView
        android:id="@+id/notice"
        android:layout_width="274dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="589dp"
        android:fontFamily="@font/headland_one"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20sp" />


    <Button
        android:id="@+id/verifyemailbutton"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="129dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="159dp"
        android:background="@drawable/loginbutton"
        android:text="@string/verify_email"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="invisible" />

    <ImageButton
        android:layout_width="53dp"
        android:layout_height="49dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="464dp"
        android:contentDescription="@string/todo"
        android:onClick="handlerImage"
        app:srcCompat="@drawable/add" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/upadteprofile"
        android:layout_width="126dp"
        android:layout_height="112dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="143dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="471dp"
        android:contentDescription="@string/bio_metrics"
        android:src="@drawable/account"
        app:civ_border_color="#BF9600"
        app:civ_border_width="1dp" />

    <ProgressBar
        android:id="@+id/updateBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="163dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="397dp"
        android:indeterminateDuration="5"
        android:visibility="invisible" />

</RelativeLayout>