<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="serif"
        android:text="@string/select_options"
        android:textAlignment="center"
        android:textColor="#957501"
        android:textSize="30sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/textView1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:background="#937A00" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="0dp"
        app:columnCount="2"
        app:useDefaultMargins="true">

        <Button
            android:id="@+id/updateProfile"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:background="@drawable/loginbutton"
            android:fontFamily="serif"
            android:text="@string/update_profile"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Logout_button"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:background="@drawable/loginbutton"
            android:fontFamily="serif"
            android:text="@string/log_out"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="1" />
    </androidx.gridlayout.widget.GridLayout>

</RelativeLayout>