<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="411dp"
        android:layout_height="184dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/signupbottom"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/signuptop"
        android:contentDescription="@string/todo" />

    <androidx.cardview.widget.CardView
        android:layout_width="385dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="500dp">

        <EditText
            android:id="@+id/FirstName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/account"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="197dp"
        android:layout_height="53dp"
        android:layout_alignBottom="@+id/imageView6"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/alegreya_bold"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="385dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="437dp">

        <EditText
            android:id="@+id/Userid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/enter_email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="385dp"
        android:layout_height="55dp"
        android:layout_alignBottom="@id/imageView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="312dp">

        <EditText
            android:id="@+id/confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="385dp"
        android:layout_height="55dp"
        android:layout_alignBottom="@id/imageView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="374dp">

        <EditText
            android:id="@+id/userpassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="385dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="249dp">

        <EditText
            android:id="@+id/userContact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/phonecontact"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/enter_contact_no"
            android:importantForAutofill="no"
            android:inputType="number" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="246dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="83dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="567dp"
        android:fontFamily="@font/headland_one"
        android:gravity="center"
        android:text="@string/enter_details_to_continue"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Signupnext"
        android:layout_width="144dp"
        android:layout_height="61dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="178dp"
        android:background="@drawable/loginbutton"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/signinoption"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="192dp"
        android:text="@string/sign_in_message"
        android:textAlignment="center"
        android:textColor="#E3B201"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="180dp"
        android:layout_marginEnd="183dp"
        android:layout_marginBottom="129dp"
        android:visibility="invisible" />
</RelativeLayout>