<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sim_replace">

    <view
        android:id="@+id/view14"
        class="androidx.viewpager.widget.ViewPager"
        android:layout_width="411dp"
        android:layout_height="731dp"
        android:background="@drawable/desert_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="412dp"
        android:layout_height="53dp"
        android:background="#32023C"
        android:fontFamily="@font/adamina"
        android:gravity="center"
        android:text="@string/sim_replace"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/R_home_b"
        android:layout_width="63dp"
        android:layout_height="53dp"
        android:background="@drawable/vannila"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/homw" />

    <view
        android:id="@+id/view16"
        class="androidx.viewpager.widget.ViewPager"
        android:layout_width="354dp"
        android:layout_height="603dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="44dp"
        android:background="#4BFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/view14"
        app:layout_constraintEnd_toEndOf="@+id/view14"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/view14" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="354dp"
        android:layout_height="225dp"
        android:background="@drawable/yellow_sun"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="@+id/view16"
        app:layout_constraintStart_toStartOf="@+id/view16"
        app:layout_constraintTop_toTopOf="@+id/view16" />

    <EditText
        android:layout_width="142dp"
        android:layout_height="41dp"
        android:layout_marginStart="186dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="19dp"
        android:background="#EBF1F4"
        android:ems="10"
        android:fontFamily="@font/antic_slab"
        android:hint="@string/phone_no"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <EditText
        android:layout_width="142dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="94dp"
        android:layout_marginBottom="83dp"
        android:background="#EBF1F4"
        android:ems="10"
        android:fontFamily="@font/antic_slab"
        android:hint="@string/enter_empid"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <EditText
        android:layout_width="142dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="135dp"
        android:background="#EBF1F4"
        android:ems="10"
        android:fontFamily="@font/antic_slab"
        android:hint="@string/enter_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:layout_width="198dp"
        android:layout_height="26dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="193dp"
        android:fontFamily="@font/adamina"
        android:text="@string/enter_user_s_details"
        android:textAlignment="center"
        android:textColor="#000427"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="352dp"
        android:layout_height="377dp"
        android:background="@drawable/stylish"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/view16"
        app:layout_constraintEnd_toEndOf="@+id/view16"
        app:layout_constraintStart_toStartOf="@+id/view16" />

    <Spinner
        android:id="@+id/Spimmer2"
        android:layout_width="145dp"
        android:layout_height="38dp"
        android:layout_marginStart="178dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="132dp"
        android:background="#F8FBFAFA"
        android:popupBackground="@drawable/vannila"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="145dp"
        android:layout_height="38dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="84dp"
        android:background="#EEFFFFFF"
        android:ems="10"
        android:fontFamily="@font/antic_slab"
        android:gravity="center"
        android:hint="@string/mobile_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/view16"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view16" />

    <TextView
        android:layout_width="253dp"
        android:layout_height="32dp"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="188dp"
        android:background="#41FFFFFF"
        android:fontFamily="@font/adamina"
        android:gravity="center"
        android:text="@string/enter_new_device_details"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/imageView4" />

    <Spinner
        android:id="@+id/Spimmer"
        android:layout_width="145dp"
        android:layout_height="38dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="28dp"
        android:background="#F3F8F1F1"
        android:popupBackground="@drawable/vannila"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="145dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="190dp"
        android:background="#F0FFFFFF"
        android:ems="10"
        android:fontFamily="@font/antic_slab"
        android:hint="@string/enter_serial"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <EditText
        android:layout_width="145dp"
        android:layout_height="38dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="101dp"
        android:background="#F0FFFFFF"
        android:ems="10"
        android:fontFamily="@font/antic_slab"
        android:hint="@string/mobile_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/view16"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/view16"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:layout_width="253dp"
        android:layout_height="32dp"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="340dp"
        android:background="#41FFFFFF"
        android:fontFamily="@font/adamina"
        android:gravity="center"
        android:text="@string/enter_old_device_details"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/imageView4" />

    <EditText
        android:layout_width="145dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="132dp"
        android:background="#EEFFFFFF"
        android:ems="10"
        android:fontFamily="@font/antic_slab"
        android:gravity="center"
        android:hint="@string/enter_serial"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="@+id/imageView4" />

    <Button
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="231dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/loginbutton"
        android:text="@string/issue"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4" />

    <Button
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="235dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/loginbutton"
        android:text="@string/replace"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4" />

    <Spinner
        android:id="@+id/Sim_designation"
        android:layout_width="142dp"
        android:layout_height="41dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="22dp"
        android:background="#E6EDF1"
        android:popupBackground="@drawable/un_5"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>